jge-core/tests/ui/scene_invalid_item_fail.rs
use jge_core::scene;

fn main() {
    let _ = scene! {
        node "root" {
            1 + 2;
        }
    };
}
